S5 : done , server can take blobs for attachments
